changed ' to `, in .md files

--- a/0.4-new-note.md
+++ b/0.4-new-note.md
@@ -1,4 +1,4 @@
-'''mermaid
+```mermaid
 sequenceDiagram
     participant browser
     participant server
@@ -21,4 +21,4 @@ sequenceDiagram
     browser->>server: https://studies.cs.helsinki.fi/exampleapp/data.json
     server-->>browser: [{"content":"I love this course!","date":"2022-11-24T12:16:05.826Z"}, ...]
     Note left of browser: browser starts executes the event handler<br>that renders notes to display
-'''
+```
