--- a/0.6-new-note-spa.md
+++ b/0.6-new-note-spa.md
@@ -1,4 +1,4 @@
-'''mermaid
+```mermaid
 sequenceDiagram
     participant browser
     participant server
@@ -11,4 +11,4 @@ sequenceDiagram
 	Note right of server: server adds note to notes list
 
     Note left of browser: spa.js checks status code, <br> if ok: prints response message to console
-'''
+```
